# SPDX-License-Identifier: Apache-2.0
# Generated by K9-AIF Generator on 2026-09-10 23:47:14

from typing import Any, Dict, Optional

from k9_aif_abb.k9_core.agent.base_agent import BaseAgent
from k9_aif_abb.k9_inference.models.inference_request import InferenceRequest
from k9_aif_abb.k9_utils.llm_invoke import llm_invoke


class DetectInvoiceAnomaliesAgent(BaseAgent):

    layer = "FinancialAnalysisAi DetectInvoiceAnomaliesAgent SBB"

    def __init__(self, config: Optional[Dict[str, Any]] = None, **kwargs):
        super().__init__(config=config or {}, **kwargs)

    def execute(self, payload: Dict[str, Any]) -> Dict[str, Any]:
        self.logger.info("[%s] Executing with payload keys: %s", self.layer, list(payload.keys()))

        prompt = (
            f"Role: {self.config.get('role', '')}\n"
            f"Goal: {self.config.get('goal', '')}\n\n"
            f"Input: {payload}"
        )

        req = InferenceRequest(
            prompt=prompt,
            task_type=self.config.get("model", "general"),
            metadata={"agent": "DetectInvoiceAnomaliesAgent"},
        )

        try:
            resp = llm_invoke(self.config, req)
        except RuntimeError as exc:
            self.logger.error("[%s] LLM unavailable: %s", self.layer, exc)
            return {"agent": "DetectInvoiceAnomaliesAgent", "output": "[WARN] LLM unavailable", "confidence": 0.0}

        self.publish_event({"type": "DetectInvoiceAnomaliesAgentCompleted", "agent": "DetectInvoiceAnomaliesAgent"})

        return {
            "agent": "DetectInvoiceAnomaliesAgent",
            "output": resp.output.strip(),
            "model_used": resp.model_alias,
        }