# SPDX-License-Identifier: Apache-2.0
# Generated by k9x_studio on 2026-09-10 23:47:14

from typing import Any, Dict, Optional

from k9_aif_abb.k9_agents.validation import (
    K9ValidationLoopAgent,
    ValidationDisposition,
    ValidationLoopContext,
    ValidationLoopResult,
)


class ReviewClassifyCodeGlAccountAgent(K9ValidationLoopAgent):

    layer = "FinancialAnalysisAi ReviewClassifyCodeGlAccountAgent SBB"

    def __init__(self, config: Optional[Dict[str, Any]] = None, **kwargs):
        super().__init__(config=config or {}, **kwargs)

    def generate_hypothesis(self, loop_ctx: ValidationLoopContext) -> str:
        """Form the next hypothesis to validate. Must return a string prompt."""
        query = loop_ctx.payload.get("query", "")
        prior = f" Prior iterations: {loop_ctx.iteration - 1}." if loop_ctx.iteration > 1 else ""
        return f"Validate the following request and assess confidence:{prior}\n\n{query}"

    def run_validation(self, hypothesis: str, loop_ctx: ValidationLoopContext) -> str:
        """Run the LLM validation tool against the current hypothesis."""
        prompt = (
            f"{hypothesis}\n\n"
            f"Return a JSON object with exactly these keys:\n"
            f"  conclusion  : string  — your finding\n"
            f"  confidence  : float   — 0.0 (no confidence) to 1.0 (certain)\n"
            f"  reasoning   : string  — brief explanation of your confidence score\n"
            f"  needs_more  : boolean — true if another iteration would improve confidence\n"
        )
        return super().run_validation(prompt, loop_ctx)

    def evaluate_observation(self, tool_result: Any, loop_ctx: ValidationLoopContext) -> Dict[str, Any]:
        """Interpret the raw validation result; return dict with confidence."""
        return super().evaluate_observation(tool_result, loop_ctx)

    def should_continue(self, observation: Dict[str, Any], loop_ctx: ValidationLoopContext) -> ValidationDisposition:
        """Decide CONTINUE | FINALIZE | ESCALATE | FAIL based on observation."""
        threshold = self.config.get("confidence_threshold", 0.8)
        confidence = observation.get("confidence", 0.0)
        if confidence >= threshold:
            return ValidationDisposition.FINALIZE
        if loop_ctx.iteration >= self.config.get("max_iterations", 5) and confidence < 0.3:
            return ValidationDisposition.ESCALATE
        return ValidationDisposition.CONTINUE

    def finalize(self, loop_ctx: ValidationLoopContext) -> ValidationLoopResult:
        """Produce the final output after the loop converges."""
        last = loop_ctx.steps[-1] if loop_ctx.steps else None
        observation = last.observation if last else {}
        confidence = last.confidence if last else 0.0
        return ValidationLoopResult(
            disposition=ValidationDisposition.FINALIZE,
            output={
                "agent": "ReviewClassifyCodeGlAccountAgent",
                "conclusion": observation.get("conclusion", ""),
                "confidence": confidence,
                "reasoning": observation.get("reasoning", ""),
            },
            steps=loop_ctx.steps,
            iterations=loop_ctx.iteration,
            final_confidence=confidence,
            evidence=[str(s.observation) for s in loop_ctx.steps],
        )