# SPDX-License-Identifier: Apache-2.0
# Generated by k9x_studio on 2026-09-10 23:47:14

import logging
from pathlib import Path
from typing import Any, Dict, Optional

from k9_aif_abb.k9_agents.registry.agent_registry import AgentRegistry
from k9_aif_abb.k9_core.orchestration.base_orchestrator import BaseOrchestrator
from k9_aif_abb.k9_orchestrators.registry.orchestrator_registry import OrchestratorRegistry
from k9_aif_abb.k9_squad.squad_loader import SquadLoader


from agents.src.review_audit_expense_for_policy_violations_agent import ReviewAuditExpenseForPolicyViolationsAgent


log = logging.getLogger(__name__)


_SQUAD_ID = "Agn6ExpenseAuditAgentSquad"



class Agn4AnomalyDetectionAgentOrchestrator(BaseOrchestrator):

    layer = "FinancialAnalysisAi Agn4AnomalyDetectionAgentOrchestrator SBB"

    def __init__(self, config: Optional[Dict[str, Any]] = None, **kwargs) -> None:
        super().__init__(config=config or {}, **kwargs)

    def _load_squad(self, squad_id: str):
        from utils.agent_loader import AgentLoader

        project_root = Path(__file__).resolve().parent.parent
        agents_yaml_dir = project_root / "agents" / "yaml"
        agent_loader = AgentLoader(agents_yaml_dir)

        agent_registry = AgentRegistry()
        for name, cls in [

            ("ReviewAuditExpenseForPolicyViolationsAgent", ReviewAuditExpenseForPolicyViolationsAgent),

        ]:
            agent_registry.register(
                name,
                lambda c=cls, n=name: c(config=agent_loader.merge_with_global(n, self.config)),
            )

        orchestrator_registry = OrchestratorRegistry()
        orchestrator_registry.register("Agn4AnomalyDetectionAgentOrchestrator", Agn4AnomalyDetectionAgentOrchestrator)

        loader = SquadLoader(agent_registry, orchestrator_registry)
        squad_yaml_path = project_root / "squads" / "yaml" / f"{squad_id.replace(' ', '_').lower()}.yaml"
        if not squad_yaml_path.exists():
            squad_yaml_path = project_root / "squads" / "yaml" / f"{''.join(c if c.isalnum() else '_' for c in squad_id).lower()}.yaml"
        return loader.load_one(str(squad_yaml_path), squad_id)

    def execute_flow(self, payload: Dict[str, Any]) -> Dict[str, Any]:
        log.info("[%s] Executing flow", self.layer)
        zt = self.apply_zero_trust(payload)
        if not zt["allowed"]:
            log.warning("[%s] Zero Trust DENIED reason=%s", self.layer, zt["reason"])
            return {"status": "denied", "reason": zt["reason"]}

        squad = self._load_squad(_SQUAD_ID)
        return squad.execute(zt["payload"])
