# SPDX-License-Identifier: Apache-2.0
# Generated by k9x_studio on 2026-09-10 23:47:14
# Extend BaseSquad only if you need custom squad behaviour.
# Default: SquadLoader wires agents from YAML — no code changes required.

from k9_aif_abb.k9_squad.base_squad import BaseSquad


class Agn7VendorMasterAgentSquad(BaseSquad):
    """Squad: Agn7VendorMasterAgentSquad — finance"""
    pass
