@startuml financial_analysis_ai_class_diagram

' Generated by k9x Studio. k9x.ai

skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #AAAAAA
skinparam ArrowColor #555555
skinparam PackageBorderColor #CCCCCC
skinparam PackageBackgroundColor #F5F7FF
skinparam defaultFontSize 12
hide circle

title FinancialAnalysisAi - Class Diagram

package "K9-AIF Framework (ABB / OOB)" #E8F5E9 {
  abstract class BaseAgent {
    + {abstract} execute(payload: dict) : dict
  }
  abstract class BaseValidationLoopAgent {
    + execute(payload: dict) : dict
    + {abstract} generate_hypothesis(loop_ctx)
    + {abstract} run_validation(hypothesis, loop_ctx)
    + {abstract} evaluate_observation(result, loop_ctx)
    + {abstract} should_continue(obs, loop_ctx) : ValidationDisposition
    + {abstract} finalize(loop_ctx) : ValidationLoopResult
  }
  class K9ValidationLoopAgent
  BaseAgent <|-- BaseValidationLoopAgent
  BaseValidationLoopAgent <|-- K9ValidationLoopAgent
  class BaseSquad {
    + execute(payload: dict) : dict
  }
  abstract class BaseOrchestrator {
    + {abstract} execute_flow(payload: dict) : dict
  }
}

package "FinancialAnalysisAi Agents" {
  package "Agn2ExceptionResolutionAgentSquad" {
    class ReviewDetectMatchingExceptionsAgent
    class Agn2ExceptionResolutionAgentSquad
  }
  package "Agn3GlCodingAgentSquad" {
    class ReviewClassifyCodeGlAccountAgent
    class Agn3GlCodingAgentSquad
  }
  package "Agn4AnomalyDetectionAgentSquad" {
    class DetectInvoiceAnomaliesAgent
    class Agn4AnomalyDetectionAgentSquad
  }
  package "Agn6ExpenseAuditAgentSquad" {
    class ReviewAuditExpenseForPolicyViolationsAgent
    class Agn6ExpenseAuditAgentSquad
  }
  package "Agn7VendorMasterAgentSquad" {
    class ReviewProcessVendorMasterUpdatesAgent
    class Agn7VendorMasterAgentSquad
  }
}

K9ValidationLoopAgent <|-- ReviewDetectMatchingExceptionsAgent
K9ValidationLoopAgent <|-- ReviewClassifyCodeGlAccountAgent
BaseAgent <|-- DetectInvoiceAnomaliesAgent
K9ValidationLoopAgent <|-- ReviewAuditExpenseForPolicyViolationsAgent
K9ValidationLoopAgent <|-- ReviewProcessVendorMasterUpdatesAgent

BaseSquad <|-- Agn2ExceptionResolutionAgentSquad
Agn2ExceptionResolutionAgentSquad *-- ReviewDetectMatchingExceptionsAgent
BaseSquad <|-- Agn3GlCodingAgentSquad
Agn3GlCodingAgentSquad *-- ReviewClassifyCodeGlAccountAgent
BaseSquad <|-- Agn4AnomalyDetectionAgentSquad
Agn4AnomalyDetectionAgentSquad *-- DetectInvoiceAnomaliesAgent
BaseSquad <|-- Agn6ExpenseAuditAgentSquad
Agn6ExpenseAuditAgentSquad *-- ReviewAuditExpenseForPolicyViolationsAgent
BaseSquad <|-- Agn7VendorMasterAgentSquad
Agn7VendorMasterAgentSquad *-- ReviewProcessVendorMasterUpdatesAgent

package "FinancialAnalysisAi Orchestrators" {
  class Agn1DeterministicRuleEngineOrchestrator
  class Agn2ExceptionResolutionAgentOrchestrator
  class Agn3GlCodingAgentOrchestrator
  class Agn4AnomalyDetectionAgentOrchestrator
  class Agn5PaymentOptimizationAgentOrchestrator
  class Agn6ExpenseAuditAgentOrchestrator
  class Agn7VendorMasterAgentOrchestrator
}

BaseOrchestrator <|-- Agn1DeterministicRuleEngineOrchestrator
Agn1DeterministicRuleEngineOrchestrator ..> Agn2ExceptionResolutionAgentSquad : loads
BaseOrchestrator <|-- Agn2ExceptionResolutionAgentOrchestrator
Agn2ExceptionResolutionAgentOrchestrator ..> Agn3GlCodingAgentSquad : loads
BaseOrchestrator <|-- Agn3GlCodingAgentOrchestrator
Agn3GlCodingAgentOrchestrator ..> Agn4AnomalyDetectionAgentSquad : loads
BaseOrchestrator <|-- Agn4AnomalyDetectionAgentOrchestrator
Agn4AnomalyDetectionAgentOrchestrator ..> Agn6ExpenseAuditAgentSquad : loads
BaseOrchestrator <|-- Agn5PaymentOptimizationAgentOrchestrator
Agn5PaymentOptimizationAgentOrchestrator ..> Agn7VendorMasterAgentSquad : loads
BaseOrchestrator <|-- Agn6ExpenseAuditAgentOrchestrator
Agn6ExpenseAuditAgentOrchestrator ..> Agn2ExceptionResolutionAgentSquad : loads
BaseOrchestrator <|-- Agn7VendorMasterAgentOrchestrator
Agn7VendorMasterAgentOrchestrator ..> Agn2ExceptionResolutionAgentSquad : loads

legend bottom right
|= Notation |= Meaning |
| ──▷ | Inheritance (extends) |
| ──◆ | Composition (owns) |
| ╌╌> | Dependency (uses) |
endlegend

@enduml